# ai-t9

./: .dockerignore  .gitignore  Dockerfile  README.md  USAGE.md  build-corpus.sh  compute-pairs.sh  modal_app.py  pyproject.toml  run_gui.sh  run_gui_modal.sh  train.sh
.github/: copilot-instructions.md
configs/: default.yaml  gpu-train-only.yaml  vast-large-s3-corpus.yaml  vast-large.yaml  vast-small-s3-corpus.yaml
data/: bigram.json  dict.json  vocab.json
examples/: demo.py  gui_demo.py
scripts/: build_image.sh  discord_to_corpus.py  download_hf_corpus.py  model_size.py  vast_manager.py  vast_orchestrate.py  vast_supervisor.py  vast_train.py  vast_train.sh
scripts/vast/: __init__.py  api.py  jobs.py  provision.py  ssh.py
src/ai_t9/: __init__.py  config.py  dictionary.py  ngram.py  predictor.py  session.py  t9_map.py
src/ai_t9/_scripts/: __init__.py  build_vocab.py  data.py  run.py  train.py
src/ai_t9/model/: __init__.py  char_ngram_encoder.py  dual_encoder.py  objectives.py  trainer.py  vocab.py
tests/: test_config.py  test_data_script.py  test_t9.py
