[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-t9"
version = "0.1.0"
description = "Advanced predictive T9 text input using a custom-trainable dual-encoder model"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "nltk>=3.8",
    "datasets>=2.0",
    "hf-transfer>=0.1.8",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
train = ["torch>=2.0", "tqdm>=4.0"]
data  = ["boto3>=1.28"]
dev   = ["pytest>=7.0", "torch>=2.0"]
gui   = ["PyQt6>=6.4"]
vast  = ["paramiko>=3.0"]

[project.scripts]
ai-t9-build-vocab = "ai_t9._scripts.build_vocab:main"
ai-t9-train       = "ai_t9._scripts.train:main"
ai-t9-data        = "ai_t9._scripts.data:main"
ai-t9-run         = "ai_t9._scripts.run:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
ai_t9 = ["py.typed"]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:`torch.jit.script_method` is deprecated:DeprecationWarning",
]
